fixed an issue where min-max wasn't shown for scalar markets on mobile unless you expanded the ticket

--- a/packages/augur-ui/src/modules/market/components/market-header/market-header.styles.less
+++ b/packages/augur-ui/src/modules/market/components/market-header/market-header.styles.less
@@ -528,10 +528,10 @@ div.ExpandedContent {
 
         &.HideProperties > div[class*="CoreProperties"] {
           > div[class*="ScalarBox"] {
-            border-top: 0;
+            // border-top: 0;
           }
 
-          > div {
+          > div:not([class*="ScalarBox"]) {
             > div:first-of-type {
               display: none;
             }
